Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}
        * Added a randomize_classes attribute which can be passed to
          Test::Class::Moose::Runner. Implemented by Andy Jack. GitHub PR #53.
        * Test::Class::Moose::Role now enables strict and warnings in the
          caller just like Test::Class::Moose does. GitHub PR #54.

0.60 2015-07-06
        * Doc updates including fixing the bug reporting link and making sure
          the CONTRIBUTORS section is up to date.

0.59 2015-07-06
        * Allow _constructor_parameter_sets to return an empty
          list. Implemented by Philipp Gortan. (GitHub issue #47)
        * Error messages when Test::Class::Moose::Load cannot load a module
          now include stack traces. (GitHub issue #43)

0.58 2014-09-05
        * Add a passed() method to class and method report objects (GitHub issue #30)
        * If a test class did not run (such as an abstract class), the time()
          method on reports now returns a zero duration time instead of
          undef (GitHub issue #34)

0.57 2014-09-02
        * Fix the homepage link in the meta info.

0.56 2014-09-02
        * This is the first release to include the deprecations and backwards
          incompatibilities from 0.55. Please see that release's notes as
          well!
        * Skip parallel tests on Windows. This may be a bug in
          Test::Class::Moose or Parallel::ForkManager, but for now we're
          punting. Reported by Alexandr Ciornii. GitHub issue #36.
        * Removed Sub::Attribute from the "recommends" list. This is required
          now, and listing it as both required and recommends is confusing.
        * Lots of doc fixes.

0.55 2014-03-18
        * There are a number of deprecations and backwards incompatible
          changes in this release!
        * Calling runtests() on Test::Class::Moose or a subclass of that class
          is now deprecated. Use the new Test::Class::Moose::Runner class
          instead.