@@ -271,7 +271,7 @@ sub _tcm_run_test_method {
     my $report  = Test::Class::Moose::Report::Method->new(
         { name => $test_method, instance_report => $instance_report } );
 
-    $self->test_report->current_class->add_test_method($report);
+    $self->test_report->current_instance->add_test_method($report);
     my $config = $self->test_configuration;
 
     my $builder = $config->builder;
